# aspnetcore/src/IO.Swagger/Controllers/DefaultApi.cs
@@ -65,6 +65,40 @@ namespace IO.Swagger.Controllers
         /// 
         /// </summary>
         /// <param name="body"></param>
+        /// <response code="200">file generated</response>
+        [HttpPost]
+        [Route("/file/generate")]
+        [ValidateModelState]
+        [SwaggerOperation("FileGeneratePost")]
+        public virtual IActionResult FileGeneratePost([FromBody]Envelope body)
+        { 
+            //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
+            // return StatusCode(200);
+
+            throw new NotImplementedException();
+        }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        /// <param name="body"></param>
+        /// <response code="200">file saved</response>
+        [HttpPost]
+        [Route("/file/save")]
+        [ValidateModelState]
+        [SwaggerOperation("FileSavePost")]
+        public virtual IActionResult FileSavePost([FromBody]Envelope body)
+        { 
+            //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
+            // return StatusCode(200);
+
+            throw new NotImplementedException();
+        }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        /// <param name="body"></param>
         /// <response code="200">log recorded</response>
         [HttpPost]
         [Route("/log")]
